[package]
name = "cli_frameless"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.5"
parity-scale-codec = "3.2.2"
reqwest = {version = "0.11.14", features = ["blocking", "json"]}
serde = {version = "1.0.152", default-features = false, features = ["derive"]}
serde_json = "1.0.91"
sp-core = "12.0.0"
sp-runtime = "14.0.0"
